# LaurelEye-game-project-BounceBack

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Laurel.sln  README.md  analyze.ps1  batch_cpp_contrib.py  code-analysis-config.json  coding_conventions.md  feature_branch_workflow.md  generate_cpp_contribution_reports.py  generate_lua_contribution_reports.py  git_cpp_contrib.py  git_lua_contrib.py  vcpkg.json
LaurelEye/: .cmake-format.yaml  .editorconfig  .gitignore  .luarc.json  CMakeLists.txt  CMakePresets.json  vcpkg.json
LaurelEye/assets/shaders/: DebugDraw.frag  DeferredRender.vert  GBufferSkinned.vert  LocalLights.frag  LocalLights_Toon.frag  ParticleRenderPass.frag  PointShadow.frag  Shadows.frag  ShadowsSkinned.vert  SinglePass.frag  SinglePassShadow.frag  SinglePassShadow.vert  SinglePassWithBuffers.frag  Skydome.frag  Skydome.vert  UIPass.frag  UIPass.vert  UIText.frag  UIText.vert  testLighting.frag
LaurelEye/cmake/: FMODVendor.cmake  LaurelEyeFmod.cmake  LaurelEyeGame.cmake
LaurelEye/games/: CMakeLists.txt
LaurelEye/games/sample/: CMakeLists.txt  main.cpp  scene_list.json
LaurelEye/games/splineTest/: CMakeLists.txt  main.cpp  scene_list.json
LaurelEye/include/LaurelEyeEngine/: pch.hpp
LaurelEye/include/LaurelEyeEngine/UI/: UIInteractionSystem.h  UILayout.h  UILayoutSystem.h  UIMaterial.h
LaurelEye/include/LaurelEyeEngine/animation/: AnimationHelpers.h  AnimationManager.h  AnimationSystem.h
LaurelEye/include/LaurelEyeEngine/audio/: AudioAsset.h  AudioComponent.h  AudioLoader.h  AudioSystem.h  BackgroundMusicComponent.h  FModAudioManager.h  ListenerComponent.h  MusicSystem.h  SoundEffectSystem2D.h  SoundEffectSystem3D.h  SpeakerComponent.h  UISoundSystem.h
LaurelEye/include/LaurelEyeEngine/core/: Config.h  Engine.h  EngineContext.h  ResourceCoordinator.h  SystemCoordinator.h
LaurelEye/include/LaurelEyeEngine/debugDraw/: DebugDrawSystem.h  IDebugDrawComponent.h
LaurelEye/include/LaurelEyeEngine/ecs/: Entity.h  Entity.inl  EntityFactory.h  IComponent.h
LaurelEye/include/LaurelEyeEngine/events/: CollisionEvent.h  EventManager.h  EventManager.inl  IEvent.h  TriggerEvent.h  UIInteractionEvent.h  WindowResizeEvent.h
LaurelEye/include/LaurelEyeEngine/framerate/: FramerateController.h  FramerateController.inl
LaurelEye/include/LaurelEyeEngine/gameManager/: GameManager.h
LaurelEye/include/LaurelEyeEngine/graphics/: FontManager.h  Graphics.h  MeshManager.h  RenderStateSaver.h  RenderSystem.h  ShaderManager.h  ShadowManager.h
LaurelEye/include/LaurelEyeEngine/input/: GLFWInput.h  IInput.h  InputCodes.h  InputManager.h
LaurelEye/include/LaurelEyeEngine/io/: AssetManager.h  AssetUtils.h  Assets.h  IAsset.h  Paths.h
LaurelEye/include/LaurelEyeEngine/logging/: EngineLog.h
LaurelEye/include/LaurelEyeEngine/math/: ArcLengthTable.h  CatmullRomSpline.h  EngineMath.h  Matrix4.h  Rect.h  Spline.h  Vector3.h  VectorTemplated.h
LaurelEye/include/LaurelEyeEngine/memory/: MemoryManager.h
LaurelEye/include/LaurelEyeEngine/physics/: CollisionManager.h  GhostBodyComponent.h  PhysicsBodyBaseComponent.h  PhysicsBodyComponent.h  PhysicsSystem.h  RigidBodyComponent.h
LaurelEye/include/LaurelEyeEngine/scene/: Scene.h  SceneManager.h
LaurelEye/include/LaurelEyeEngine/scripting/: IScriptBroker.h  IScriptEngineState.h  IScriptInstance.h  ScriptComponent.h  ScriptSystem.h  ScriptTypeRegistry.h
LaurelEye/include/LaurelEyeEngine/transform/: TransformComponent.h
LaurelEye/include/LaurelEyeEngine/window/: IWindow.h  WindowManager.h
LaurelEye/source/LaurelEyeEngine/: CMakeLists.txt
LaurelEye/source/LaurelEyeEngine/UI/: UIInteractionSystem.cpp  UILayoutSystem.cpp
LaurelEye/source/LaurelEyeEngine/animation/: AnimationManager.cpp  AnimationSystem.cpp
LaurelEye/source/LaurelEyeEngine/audio/: AudioAsset.cpp  AudioComponent.cpp  AudioLoader.cpp  AudioSystem.cpp  FModAudioManager.cpp  ListenerComponent.cpp  MusicSystem.cpp  SpeakerComponent.cpp
LaurelEye/source/LaurelEyeEngine/core/: Engine.cpp  (+2 more)
LaurelEye/tests/LaurelEyeEngineUnitTests/: AudioTest.cpp  CMakeLists.txt  CollisionEventTest.cpp  ECSTests.cpp  EngineTest.cpp  EventTest.cpp  IOTests.cpp  InputPhysTest.cpp  InputTest.cpp  PhysicsTest.cpp  RenderTest.cpp  ScriptingTest.cpp  TestDefinitions.h  TransformTest.cpp
doc/: CMakeLists.txt
source/LaurelEyeEngine/: CMakeLists.txt
source/LaurelEyeEngine/UI/: UIElementManager.cpp  UILayout.cpp
source/LaurelEyeEngine/audio/: AudioAsset.cpp  AudioSystem.cpp  FModAudioManager.cpp  SpeakerComponent.cpp
source/LaurelEyeEngine/core/: Engine.cpp  EngineMath.cpp  Matrix4.cpp  Quaternion.cpp  ResourceCoordinator.cpp  SystemCoordinator.cpp  Vector3.cpp
source/LaurelEyeEngine/debugDraw/: DebugDrawSystem.cpp
source/LaurelEyeEngine/ecs/: Entity.cpp  EntityFactory.cpp
source/LaurelEyeEngine/graphics/: MeshManager.cpp  MeshManagerPrimitives.cpp  RenderSystem.cpp  ShadowManager.cpp  Window.cpp
source/LaurelEyeEngine/input/: GLFWInput.cpp  InputManager.cpp  InputSystem.cpp  InputTest.cpp
source/LaurelEyeEngine/io/: AssetManager.cpp
source/LaurelEyeEngine/math/: EngineMath.cpp  Matrix4.cpp  Quaternion.cpp  Transform.cpp  Vector3.cpp  VectorTemplated.cpp
source/LaurelEyeEngine/memory/: MemoryManager.cpp
source/LaurelEyeEngine/particles/: ParticleEmitterComponent.cpp  ParticleSystem.cpp
source/LaurelEyeEngine/physics/: Body.cpp  Collider.cpp  CollisionManager.cpp  PhysicsBodyComponent.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp
source/LaurelEyeEngine/scene/: Scene.cpp  SceneManager.cpp
source/LaurelEyeEngine/scripting/: ScriptSystem.cpp
source/LaurelEyeEngine/transform/: TransformSystem.cpp
source/LaurelEyeEngine/window/: WindowManager.cpp
tests/LaurelEyeEngineUnitTests/: AudioTest.cpp  CMakeLists.txt  CollisionEventTest.cpp  ECSTests.cpp  EngineTest.cpp  EventTest.cpp  IOTests.cpp  InputPhysTest.cpp  InputTest.cpp  MainTest.cpp  MathTest.cpp  MemoryTest.cpp  PhysicsTest.cpp  RenderTest.cpp  ScriptingTest.cpp  TestDefinitions.h  ThreadingTest.cpp  TransformTest.cpp  WindowTest.cpp
(+646 files in other folders)
